# TFG

./: .gitignore
ElCentinela_ESP32/: ElCentinela_ESP32.ino
ElCentinela_ESP32/src/controladora/: ConexionServidor.cpp  ConexionServidor.h  ControlServos.cpp  ControlServos.h
ElCentinela_ESP32/src/modelo/: Configuracion.h
ElCentinela_ESP32/src/vista/: Camara.cpp  Camara.h  LedEstado.cpp  LedEstado.h
TFG/Server/: Server.cpp
TFG/include/controladora/: GestorControl.h  Servidor.h
TFG/include/modelo/: CamaraESP.h  ColaFrames.h  GestorBD.h  ListenerClientes.h  ListenerESP32.h  ProcesadorIA.h  Protocolo.h
TFG/src/controladora/: GestorControl.cpp  Servidor.cpp  main.cpp
TFG/src/modelo/: CamaraESP.cpp  ColaFrames.cpp  (+5 more)
Test ESP32/Test_mov_servo/: Test_mov_servo.ino
bd/: elcentinela.sql
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
scripts/: arrancar.sh  compilar.sh  elcentinela.service  instalar.sh  ngrok.service
servidor/: CMakeLists.txt  Protocolo.cpp  Protocolo.h  config.txt  main.cpp  yolo_server.py
servidor/controladora/: GestorConexiones.cpp  GestorConexiones.h  HiloESP32.cpp  HiloESP32.h  HiloFlutter.cpp  HiloFlutter.h  ServicioIA.cpp  ServicioIA.h
servidor/modelo/: ConexionBD.cpp  ConexionBD.h  Esp32.cpp  Esp32.h  Esp32DAO.cpp  Esp32DAO.h  Medio.cpp  Medio.h  MedioDAO.cpp  MedioDAO.h  RegistroIA.cpp  RegistroIA.h  RegistroIADAO.cpp  RegistroIADAO.h  RegistroUsuario.cpp  RegistroUsuario.h  RegistroUsuarioDAO.cpp  RegistroUsuarioDAO.h  Usuario.cpp  Usuario.h  UsuarioDAO.cpp  UsuarioDAO.h
servidor/vista/: Logger.cpp  Logger.h
(+14 files in other folders)
